--- a/whenthen-web/src/components/SideBarComponent/DesktopDefault.module.scss
+++ b/whenthen-web/src/components/SideBarComponent/DesktopDefault.module.scss
@@ -1,22 +1,19 @@
 @import '../../assets/scsses/config';
-
+.sideBarArea {
+  width: 180px;
+  height: 100%;
+  background: #c9c990;
+}
 .sideBar {
-  margin-top: 50px;
   position: fixed;
   width: 180px;
-  padding-left: 0px;
-  background: #c9c990;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  overflow: hidden;
-  z-index: 100;
+  z-index: 99;
 }
 
 .sideBarOutside {
   display: block;
   position: fixed;
-  top: 0;
+  top: 50;
   left: 0;
   right: 0;
   bottom: 0;
